# mantishack

./: .gitignore  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRAST.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DISCLAIMER_BOB_STYLE.md  LICENSE-MANTISHACK  NOTICE  PORTING.md  README.md  ROADMAP.md  SECURITY_BOB_STYLE.md  SERVER.md  app.html  conftest.py  deny.toml  install.ps1  install.sh  mantishack.py  mantishack_agentic.py  mantishack_codeql.py  mantishack_fuzzing.py  pytest.ini  requirements-dev.txt  requirements.txt  server.json  server.py
.claude/: AGENTS.md  README.md  settings.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.devcontainer/: Dockerfile  devcontainer.json  requirements-all-optional.txt  test_devcontainer.py
.mantis/: RED_TEAM_BRIEF.md
Formula/: mantishack.rb
core/: __init__.py
crates/mantis-adapters/: Cargo.toml
crates/mantis-adapters/src/: claude.rs  codex.rs  env.rs  lib.rs  opencode.rs  standalone.rs
crates/mantis-api/: Cargo.toml
crates/mantis-api/src/: fuzz_seeds.rs  graphql.rs  grpc.rs  lib.rs  openapi.rs
crates/mantis-auth/: Cargo.toml
crates/mantis-auth-differential/: Cargo.toml
crates/mantis-auth-differential/src/: classify.rs  lib.rs  runner.rs  shape.rs
crates/mantis-auth/src/: lib.rs  profile.rs  redact.rs  store.rs
crates/mantis-auth/tests/: integration.rs
crates/mantis-bench/: Cargo.toml
crates/mantis-bench/src/: baseline.rs  diff.rs  lib.rs  reproducibility.rs  result.rs  scoreboard.rs  testbeds.rs
crates/mantis-binary/: Cargo.toml
crates/mantis-binary/src/: lib.rs
crates/mantis-chain/: Cargo.toml
crates/mantis-chain/src/: lib.rs
crates/mantis-chat/: Cargo.toml
crates/mantis-chat-tui/: Cargo.toml
crates/mantis-chat-tui/src/: app.rs  attachments.rs  input.rs  lib.rs  messages.rs  ui.rs
crates/mantis-chat-tui/src/widgets/: markdown.rs  mod.rs  picker.rs  slash.rs
crates/mantis-chat/src/: conversation.rs  history.rs  lib.rs  playbooks.rs  slash.rs
crates/mantis-chat/src/tools/: mod.rs  user.rs
crates/mantis-cli/: Cargo.toml
crates/mantis-cli/src/: banner.rs  llm_pick.rs  main.rs  model_picker.rs  project_config.rs  run_log.rs  setup.rs  tools.rs
crates/mantis-cli/src/tools/: decode_jwt.rs
crates/mantis-compliance/: Cargo.toml
crates/mantis-compliance/src/: asvs.rs  cwe.rs  lib.rs  masvs.rs  mitre.rs  owasp.rs  regulatory.rs  vuln_class.rs
crates/mantis-core/: Cargo.toml
crates/mantis-core/src/: hash.rs  lib.rs
crates/mantis-crawler/: Cargo.toml
crates/mantis-crawler/src/: lib.rs
crates/mantis-daemon/: Cargo.toml
crates/mantis-daemon/examples/: exercise_fsm.rs
crates/mantis-daemon/src/: lib.rs  pipeline.rs  service.rs
crates/mantis-event-store/: Cargo.toml
crates/mantis-event-store/src/: event.rs  merkle.rs  store.rs
crates/mantis-event-store/tests/: integration.rs  scalability.rs
crates/mantis-fsm/: Cargo.toml
crates/mantis-fsm/src/: adjudication.rs  coverage.rs  evidence.rs  gates.rs  goal.rs  grade.rs  lib.rs  severity.rs  state.rs  verification.rs
crates/mantis-mcp/: Cargo.toml
crates/mantis-mcp/examples/: archive_engagement.rs  render_ingest.rs
crates/mantis-mcp/src/: daemon.rs  lib.rs  main.rs  pass.rs  scope.rs  server.rs  utility_tools.rs  wave.rs
crates/mantis-mobile/: Cargo.toml
crates/mantis-mobile/src/: lib.rs
crates/mantis-notify/: Cargo.toml
crates/mantis-notify/src/: bugcrowd.rs  discord.rs  github_sarif.rs  hackerone.rs  jira.rs  lib.rs  linear.rs  notification.rs  slack.rs  teams.rs
crates/mantis-orchestrator/: Cargo.toml
crates/mantis-orchestrator/src/: archive.rs  discover.rs  find_auth_bugs.rs  lib.rs
crates/mantis-pack/: Cargo.toml
crates/mantis-pack/src/: lib.rs
crates/mantis-payloads/: Cargo.toml
crates/mantis-payloads/src/: cmdi.rs  lfi.rs  lib.rs  open_redirect.rs  sqli.rs  ssrf.rs  ssti.rs  wordlists.rs  xss.rs  xxe.rs
crates/mantis-recon/: Cargo.toml
crates/mantis-recon-pipeline/: Cargo.toml
crates/mantis-recon-pipeline/src/: anomaly.rs  bundle.rs  cache.rs  lib.rs  orchestrator.rs
crates/mantis-recon-tools/: Cargo.toml
crates/mantis-recon-tools/src/: intel.rs  inventory.rs  lib.rs  runners.rs
crates/mantis-recon/src/: dnsx.rs  httpx.rs  lib.rs  passive_subdomain.rs
crates/mantis-scanner-http/: Cargo.toml
crates/mantis-scanner-http/src/: enumerator.rs  lib.rs  probe.rs
crates/mantis-scanner-http/tests/: integration.rs
crates/mantis-secrets/: Cargo.toml
crates/mantis-secrets/src/: entropy.rs  lib.rs  rules.rs
crates/mantis-server/: Cargo.toml
crates/mantis-server/src/: auth.rs  error.rs  lib.rs  provider.rs  routes.rs
crates/mantis-server/src/handlers/: chat.rs  engagements.rs  mod.rs
crates/mantis-signup/: Cargo.toml
crates/mantis-signup/src/: detect.rs  email.rs  lib.rs  supabase.rs
deploy/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_RENAME_PROPOSAL.md  CLAUDE_CODE_QUICKSTART.md  CLAUDE_CODE_USAGE.md  DATAFLOW_VALIDATION_SUMMARY.md  DEPENDENCIES.md  EXTENDING_LAUNCHER.md  FIRST_RUN_BOB_STYLE.md  FUZZING_QUICKSTART.md  HASH_INDEPENDENCE.md  IMPROVEMENTS_100.md  MANTIS_WORKFLOW.md  MCP_TO_CLI_MIGRATION.md  PRD_MANTISHACK_AI_NATIVE_SECURITY_HARNESS.md  PYTHON_CLI.md  README.md  ROADMAP_BOB_STYLE.md  TRANSITION_AUDIT.md  TROUBLESHOOTING_BOB_STYLE.md  VISUAL_DESIGN.md  capability-hypergraph.md  context-scaling-architecture.md  crash-analysis.md  exploit-feasibility.md  exploitability-validation-integration.md  redteam-pack.md  sandbox.md  sca.md
libexec/: mantishack-agentic  mantishack-annotate  mantishack-ast  mantishack-binary-understand  mantishack-build-checklist  mantishack-cc-trust-check  mantishack-coverage-summary  mantishack-cve-diff  mantishack-enrich-context-map-ast-view  mantishack-enrich-context-map-callgraph  mantishack-enrich-context-map-sites  mantishack-enrich-flow-trace-ast-view  mantishack-lifecycle-hook  mantishack-llm-scorecard  mantishack-normalize-context-map  mantishack-pick-strategies  mantishack-pid1-shim  mantishack-project-manager  mantishack-r2-sandboxed  mantishack-render-diagrams  mantishack-run-lifecycle  (+23 more)
(+706 files in other folders)
