[package]
name = "mantis-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benchmark scoring + comparison for Mantis against external corpora (xbow-benchmarks, custom). Reads result JSON files, computes per-tag/per-level scoreboards, and diffs snapshots so improvements (or regressions) are visible at a glance."

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
