[package]
name = "mantis-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Mantis daemon — gRPC server library and standalone binary."

[lib]
name = "mantis_daemon"
path = "src/lib.rs"

[[bin]]
name = "mantis-daemon"
path = "src/bin/mantis-daemon.rs"

[dependencies]
mantis-claim = { workspace = true }
mantis-core = { workspace = true }
mantis-egress = { workspace = true }
mantis-event-store = { workspace = true }
mantis-fsm = { workspace = true }
mantis-hypothesis = { workspace = true }
mantis-planner = { workspace = true }
mantis-posterior = { workspace = true }
mantis-primitive = { workspace = true }
mantis-proto = { workspace = true }
mantis-report = { workspace = true }
mantis-scanner-http = { workspace = true }
mantis-scope = { workspace = true }
mantis-tiered-exec = { workspace = true }
mantis-web-ui = { workspace = true }
mantis-workspace = { workspace = true }

reqwest = { workspace = true }

anyhow = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mantis-workspace = { workspace = true, features = [] }

[lints]
workspace = true
