[package]
name = "mantis-event-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RocksDB-backed append-only event log with Merkle evidence chain."

[dependencies]
mantis-core = { workspace = true }
mantis-workspace = { workspace = true }
blake3 = { workspace = true }
camino = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
