[package]
name = "mantis-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP stdio server that fronts the Mantis daemon: LLM-driven engagement orchestration without the rigid `mantis pentest` polling loop."

[[bin]]
name = "mantis-mcp"
path = "src/main.rs"

[dependencies]
mantis-core = { workspace = true }
mantis-pack = { workspace = true }
mantis-proto = { workspace = true }
mantis-scope = { workspace = true }
mantis-auth = { workspace = true }
mantis-auth-differential = { workspace = true }
mantis-recon-tools = { workspace = true }
mantis-tiered-exec = { workspace = true }
mantis-workspace = { workspace = true }

blake3 = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }

tonic = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
