[package]
name = "mantis-recon-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic parallel recon pipeline. Runs subfinder + httpx + nuclei + trufflehog + trivy concurrently via tokio::join! and assembles a ReconBundle for downstream LLM-driven exploration. Wall-clock is max(scanner durations) instead of sum."

[dependencies]
mantis-static-scan = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
