[package]
name = "mantis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP/SSE API for the mantis CLI — wraps mantis-chat as a service."

[dependencies]
mantis-chat = { workspace = true }
mantis-synthesizer = { workspace = true }
mantis-proto = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }

[lints]
workspace = true
